--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase + 自動ログ保存)</title>
+<title>共有リアルタイム多重カウントダウンタイマー (Firebase連携版)</title>
 <style>
-  body{background:#fff;color:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:0;}
+  body{background:#fff;color:#000;font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;margin:0;padding:0;}
   header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
   .toolbar{display:flex;flex-wrap:wrap;gap:8px;align-items:center;}
   button{border:2px solid #001f3f;background:#fff;color:#001f3f;border-radius:8px;padding:5px 6px;font-weight:600;cursor:pointer;min-width:50px;font-size:13px;}
   button:disabled{border-color:#ccc;color:#aaa;cursor:not-allowed;}
   .btn-blue{background:#007BFF;border-color:#007BFF;color:#fff;}
+  .btn-danger{border-color:red;color:red;}
   .list{display:grid;grid-auto-flow:column;grid-auto-columns:min-content;gap:16px;padding:16px;}
   .column{display:flex;flex-direction:column;gap:16px;}
   .timer{border:2px solid #001f3f;border-radius:10px;padding:10px;display:flex;flex-direction:column;gap:8px;width:300px;}
@@ -19,267 +20,229 @@
   .presets{display:flex;justify-content:center;gap:6px;flex-wrap:nowrap;}
   .progress{width:100%;height:10px;background:#eee;border:1px solid #001f3f;border-radius:5px;overflow:hidden;}
   .bar{height:100%;width:0;background:#001f3f;transition:width .3s;}
+  .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.45);z-index:50;}
+  .modal-inner{background:#fff;border:2px solid #001f3f;color:#000;border-radius:16px;max-width:420px;width:90%;padding:16px;}
 </style>
 </head>
 <body>
 <header>
   <div class="toolbar">
     <button id="addTimer" class="btn-blue">＋ 新規タイマー</button>
-    <button id="resetAll">全タイマーリセット</button>
     <button id="enableSound" class="btn-blue">音を有効化/テスト</button>
+    <button id="resetAll" class="btn-danger">全体リセット</button>
   </div>
 </header>
 <main>
   <div class="list" id="list"></div>
 </main>
+
+<!-- 完了通知モーダル -->
+<div id="doneModal" class="modal" role="dialog" aria-modal="true">
+  <div class="modal-inner">
+    <h3>タイマー完了</h3>
+    <p id="doneName"></p>
+    <div style="text-align:right;">
+      <button id="stopSound" class="btn-blue">音を止める / OK</button>
+    </div>
+  </div>
+</div>
+
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getDatabase, ref, set, update, remove, push, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-// ===== Firebase設定 =====
-const firebaseConfig = {
-  apiKey: "AIzaSyCSIIPz6Q8RRH1ijLcU-SD74IWk10lt2Uk",
-  authDomain: "multi-timer-share.firebaseapp.com",
-  projectId: "multi-timer-share",
-  storageBucket: "multi-timer-share.firebasestorage.app",
-  messagingSenderId: "619054972489",
-  appId: "1:619054972489:web:ee1a5ad15da335f2e68998",
-  databaseURL: "https://multi-timer-share-default-rtdb.asia-southeast1.firebasedatabase.app"
-};
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
+  // === Firebase設定 ===
+  const firebaseConfig = {
+    apiKey: "AIzaSyCSIIPz6Q8RRH1ijLcU-SD74IWk10lt2Uk",
+    authDomain: "multi-timer-share.firebaseapp.com",
+    projectId: "multi-timer-share",
+    storageBucket: "multi-timer-share.firebasestorage.app",
+    messagingSenderId: "619054972489",
+    appId: "1:619054972489:web:ee1a5ad15da335f2e68998",
+    databaseURL: "https://multi-timer-share-default-rtdb.asia-southeast1.firebasedatabase.app"
+  };
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
 
-// ===== HTML要素 =====
-const list = document.getElementById("list");
-const addBtn = document.getElementById("addTimer");
-const resetAllBtn = document.getElementById("resetAll");
-const enableSoundBtn = document.getElementById("enableSound");
-let timers = {};
-let audioCtx = null;
-let beepInterval = null;
+  // === DOM取得 ===
+  const list=document.getElementById('list');
+  const addBtn=document.getElementById('addTimer');
+  const soundBtn=document.getElementById('enableSound');
+  const resetAll=document.getElementById('resetAll');
+  const modal=document.getElementById('doneModal');
+  const doneName=document.getElementById('doneName');
+  const stopSound=document.getElementById('stopSound');
 
-// ===== サウンド関数 =====
-function ensureAudio() {
-  if (!audioCtx) {
-    try { audioCtx = new (window.AudioContext || window.webkitAudioContext)(); } catch {}
-  } else if (audioCtx.state === "suspended") audioCtx.resume();
-  return audioCtx;
-}
-function tone(freq = 1200, dur = 0.12) {
-  const ctx = ensureAudio();
-  if (!ctx) return;
-  const o = ctx.createOscillator();
-  const g = ctx.createGain();
-  o.type = "square";
-  o.frequency.setValueAtTime(freq, ctx.currentTime);
-  g.gain.setValueAtTime(0.0001, ctx.currentTime);
-  g.gain.exponentialRampToValueAtTime(0.12, ctx.currentTime + 0.01);
-  g.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + dur);
-  o.connect(g).connect(ctx.destination);
-  o.start();
-  o.stop(ctx.currentTime + dur);
-}
-function beepPatternOnce(times = 3) {
-  const ctx = ensureAudio();
-  if (!ctx) return;
-  for (let i = 0; i < times; i++) setTimeout(() => tone(1200), i * 200);
-}
-function startRepeatingBeep() {
-  stopRepeatingBeep();
-  beepPatternOnce(6);
-  beepInterval = setInterval(() => beepPatternOnce(6), 1200);
-}
-function stopRepeatingBeep() {
-  if (beepInterval) clearInterval(beepInterval);
-  beepInterval = null;
-}
+  let timers={}, beepInterval=null, audioCtx=null;
 
-// ===== ログ保存 =====
-function logEvent(action, detail = "") {
-  const ts = new Date().toISOString();
-  push(ref(db, "logs"), { action, detail, timestamp: ts });
-}
-
-// ===== 基本関数 =====
-function fmt(sec) {
-  const h = Math.floor(sec / 3600),
-    m = Math.floor((sec % 3600) / 60),
-    s = sec % 60;
-  return `${String(h).padStart(2, "0")}:${String(m).padStart(2, "0")}:${String(s).padStart(2, "0")}`;
-}
-function parseDuration(text) {
-  if (!text) return null;
-  const t = text.trim();
-  const mm = t.match(/(\\d+)m/i);
-  const ss = t.match(/(\\d+)s/i);
-  let sec = 0;
-  if (mm) sec += parseInt(mm[1]) * 60;
-  if (ss) sec += parseInt(ss[1]);
-  if (!mm && !ss) sec = parseInt(t) || 0;
-  return sec > 0 ? sec : null;
-}
-
-// ===== タイマー描画 =====
-function render() {
-  list.innerHTML = "";
-  const arr = Object.values(timers);
-  const cols = Math.ceil(arr.length / 5);
-  for (let c = 0; c < cols; c++) {
-    const col = document.createElement("div");
-    col.className = "column";
-    arr.slice(c * 5, c * 5 + 5).forEach((t) => col.appendChild(renderTimer(t)));
-    list.appendChild(col);
+  // === 音関係 ===
+  function ensureAudio(){
+    if(!audioCtx){
+      try{audioCtx=new (window.AudioContext||window.webkitAudioContext)();}catch(e){alert("AudioContext初期化失敗");}
+    } else if(audioCtx.state==="suspended"){audioCtx.resume();}
   }
-  updateBars();
-}
+  function beepOnce(){
+    ensureAudio();
+    const ctx=audioCtx; if(!ctx)return;
+    const now=ctx.currentTime;
+    const freqs=[1000,1200,1400];
+    freqs.forEach((f,i)=>{
+      const o=ctx.createOscillator();const g=ctx.createGain();
+      o.type="square";o.frequency.value=f;
+      o.connect(g).connect(ctx.destination);
+      g.gain.setValueAtTime(0.2,now+i*0.2);
+      g.gain.exponentialRampToValueAtTime(0.001,now+i*0.2+0.18);
+      o.start(now+i*0.2);o.stop(now+i*0.2+0.2);
+    });
+  }
+  function startBeepLoop(){
+    stopBeepLoop();
+    beepOnce();
+    beepInterval=setInterval(beepOnce,1200);
+  }
+  function stopBeepLoop(){
+    if(beepInterval){clearInterval(beepInterval);beepInterval=null;}
+  }
+  soundBtn.onclick=()=>{ensureAudio();beepOnce();};
 
-function renderTimer(t) {
-  const d = document.createElement("div");
-  d.className = "timer";
-  d.dataset.id = t.id;
-  d.innerHTML = `
-    <input type="text" class="js-name" value="${t.name}">
-    <div class="time js-time">${fmt(t.remain)}</div>
-    <div class="presets">
-      ${[
-        ["+1h", 3600],
-        ["+10min", 600],
-        ["+5min", 300],
-        ["+1min", 60],
-      ]
-        .map(([l, s]) => `<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`)
-        .join("")}
-    </div>
-    <div class="presets">
-      ${[
-        ["+10sec", 10],
-        ["+5sec", 5],
-        ["+1sec", 1],
-      ]
-        .map(([l, s]) => `<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`)
-        .join("")}<button class='js-reset'>再設定</button>
-    </div>
-    <div class="progress"><div class="bar js-bar"></div></div>
-    <div class="presets">
-      <button class='js-start'>Start</button><button class='js-pause'>Pause</button>
-      <button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button>
-    </div>`;
-  d.querySelector(".js-name").addEventListener("change", (e) => updateTimer(t.id, { name: e.target.value }));
-  d.querySelectorAll(".js-extend").forEach((b) => b.addEventListener("click", () => extendTimer(t.id, Number(b.dataset.sec))));
-  d.querySelector(".js-reset").addEventListener("click", () => resetTimer(t.id));
-  d.querySelector(".js-reset2").addEventListener("click", () => resetTimer(t.id));
-  d.querySelector(".js-start").addEventListener("click", () => startTimer(t.id));
-  d.querySelector(".js-pause").addEventListener("click", () => pauseTimer(t.id));
-  d.querySelector(".js-delete").addEventListener("click", () => deleteTimer(t.id));
-  return d;
-}
+  // === ログ ===
+  function logEvent(action, detail=""){
+    push(ref(db,"logs"),{timestamp:new Date().toISOString(),action,detail});
+  }
 
-function updateBars() {
-  document.querySelectorAll(".timer").forEach((box) => {
-    const id = box.dataset.id;
-    const t = timers[id];
-    if (!t) return;
-    box.querySelector(".js-time").textContent = fmt(t.remain);
-    const bar = box.querySelector(".js-bar");
-    const pct = t.total > 0 ? Math.max(0, Math.min(100, (1 - t.remain / t.total) * 100)) : 0;
-    bar.style.width = pct + "%";
-    box.querySelectorAll(".js-extend").forEach((b) => (b.disabled = t.running));
+  // === 時間関連 ===
+  const fmt=(s)=>{s=Math.max(0,Math.floor(s));const h=Math.floor(s/3600),m=Math.floor((s%3600)/60),r=s%60;return `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(r).padStart(2,"0")}`;};
+  function parseDuration(txt){if(!txt)return null;const m=txt.match(/(\d+)m/i);const s=txt.match(/(\d+)s/i);let sec=0;if(m)sec+=parseInt(m[1])*60;if(s)sec+=parseInt(s[1]);if(!m&&!s)sec=parseInt(txt)||0;return sec>0?sec:null;}
+
+  // === Timer描画 ===
+  function render(){
+    list.innerHTML="";
+    const arr=Object.values(timers);
+    const cols=Math.ceil(arr.length/5);
+    for(let c=0;c<cols;c++){
+      const col=document.createElement("div");
+      col.className="column";
+      arr.slice(c*5,c*5+5).forEach(t=>col.appendChild(renderTimer(t)));
+      list.appendChild(col);
+    }
+  }
+  function renderTimer(t){
+    const d=document.createElement("div");
+    d.className="timer";d.dataset.id=t.id;
+    d.innerHTML=`
+      <input type="text" class="js-name" value="${t.name}">
+      <div class="time js-time">${fmt(t.remain)}</div>
+      <div class="presets">${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}</div>
+      <div class="presets">${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset'>再設定</button></div>
+      <div class="progress"><div class="bar js-bar"></div></div>
+      <div class="presets"><button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button></div>`;
+    d.querySelector(".js-name").addEventListener("change",e=>update(ref(db,"timers/"+t.id),{name:e.target.value}));
+    d.querySelectorAll(".js-extend").forEach(b=>b.addEventListener("click",()=>extendTimer(t.id,Number(b.dataset.sec))));
+    d.querySelector(".js-reset").onclick=()=>resetTimer(t.id);
+    d.querySelector(".js-reset2").onclick=()=>resetTimer(t.id);
+    d.querySelector(".js-start").onclick=()=>startTimer(t.id);
+    d.querySelector(".js-pause").onclick=()=>pauseTimer(t.id);
+    d.querySelector(".js-delete").onclick=()=>deleteTimer(t.id);
+    return d;
+  }
+  function updateBars(){
+    document.querySelectorAll(".timer").forEach(el=>{
+      const id=el.dataset.id;const t=timers[id];if(!t)return;
+      const timeEl=el.querySelector(".js-time");timeEl.textContent=fmt(t.remain);
+      const bar=el.querySelector(".js-bar");const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+"%";
+      el.querySelectorAll(".js-extend").forEach(b=>b.disabled=t.running);
+    });
+  }
+
+  // === Timer操作 ===
+  function newTimer(sec){
+    const id=push(ref(db,"timers")).key;
+    const t={id,name:"タイマー",total:sec,remain:sec,running:false,startTime:null};
+    set(ref(db,"timers/"+id),t);
+    logEvent("Create",`total=${sec}`);
+  }
+  function extendTimer(id,sec){
+    const t=timers[id];if(!t)return;
+    const newRemain=Math.max(0,(t.remain||0)+sec);
+    const newTotal=Math.max(1,(t.total||0)+sec);
+    update(ref(db,"timers/"+id),{remain:newRemain,total:newTotal,running:false,startTime:null});
+    logEvent("Extend",`${t.name} +${sec}s`);
+  }
+  function startTimer(id){
+    const t=timers[id];if(!t||t.running)return;
+    update(ref(db,"timers/"+id),{running:true,startTime:Date.now(),total:t.remain});
+    logEvent("Start",t.name);
+  }
+  function pauseTimer(id){
+    const t=timers[id];if(!t||!t.running)return;
+    const now=Date.now();
+    const elapsed=Math.floor((now-(t.startTime||now))/1000);
+    const remain=Math.max(0,t.total-elapsed);
+    update(ref(db,"timers/"+id),{running:false,remain,startTime:null});
+    logEvent("Pause",`${t.name} remain=${remain}`);
+  }
+  function resetTimer(id){
+    const t=timers[id];if(!t)return;
+    if(!confirm(`「${t.name}」を0に戻しますか？`))return;
+    update(ref(db,"timers/"+id),{remain:0,total:0,running:false,startTime:null});
+    logEvent("Reset",t.name);
+  }
+  function deleteTimer(id){
+    if(!confirm("削除しますか？"))return;
+    remove(ref(db,"timers/"+id));
+    logEvent("Delete",id);
+  }
+
+  // === 全体リセット ===
+  resetAll.onclick=()=>{
+    if(confirm("全タイマーとログを削除しますか？")){
+      remove(ref(db,"timers"));remove(ref(db,"logs"));logEvent("AllReset","全削除");
+    }
+  };
+
+  // === 新規追加 ===
+  addBtn.onclick=()=>{
+    const v=prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");
+    if(v===null)return;
+    const sec=parseDuration(v);
+    if(!sec){alert("正しい値を入力してください");return;}
+    newTimer(sec);
+  };
+
+  // === Firebase購読 ===
+  onValue(ref(db,"timers"),snap=>{
+    timers=snap.val()||{};
+    render();
   });
-}
 
-// ===== タイマー操作 =====
-function newTimerObj(sec) {
-  const id = push(ref(db, "timers")).key;
-  return { id, name: "タイマー", total: sec, remain: sec, running: false, startTime: null };
-}
-function addTimer() {
-  const v = prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");
-  if (v === null) return;
-  const sec = parseDuration(v);
-  if (!sec) return alert("正しい値を入力してください");
-  const t = newTimerObj(sec);
-  set(ref(db, "timers/" + t.id), t);
-  logEvent("Create", `${t.name} total=${t.total}s`);
-}
-function updateTimer(id, data) {
-  update(ref(db, "timers/" + id), data);
-}
-function extendTimer(id, sec) {
-  const t = timers[id];
-  if (!t || t.running) return;
-
-  const newRemain = Math.max(0, t.remain + sec);
-  const newTotal = Math.max(1, t.total + sec);
-
-  // 停止中のとき、再スタート時の基準をずらす
-  updateTimer(id, {
-    remain: newRemain,
-    total: newTotal,
-    startTime: Date.now(), // ←追加: start押下時の基準を最新化
-  });
-
-  logEvent("Extend", `${t.name} +${sec}s (remain=${newRemain})`);
-}
-
-function resetTimer(id) {
-  const t = timers[id];
-  if (!t) return;
-  updateTimer(id, { remain: 0, running: false });
-  logEvent("Reset", t.name);
-}
-function startTimer(id) {
-  const t = timers[id];
-  if (!t || t.running) return;
-  const now = Date.now();
-  const diff = t.total - t.remain;
-  updateTimer(id, { running: true, startTime: now - diff * 1000 });
-  logEvent("Start", t.name);
-}
-function pauseTimer(id) {
-  const t = timers[id];
-  if (!t || !t.running) return;
-  updateTimer(id, { running: false });
-  logEvent("Pause", t.name);
-}
-function deleteTimer(id) {
-  if (!confirm("削除しますか？")) return;
-  remove(ref(db, "timers/" + id));
-  logEvent("Delete", id);
-}
-resetAllBtn.addEventListener("click", () => {
-  if (!confirm("全タイマーを削除しますか？")) return;
-  remove(ref(db, "timers"));
-  logEvent("ResetAll");
-});
-
-// ===== Firebase同期 =====
-onValue(ref(db, "timers"), (snap) => {
-  timers = snap.val() || {};
-  render();
-});
-setInterval(() => {
-  const now = Date.now();
-  Object.values(timers).forEach((t) => {
-    if (t.running && t.startTime) {
-      const diff = Math.floor((now - t.startTime) / 1000);
-      const newRemain = Math.max(0, t.total - diff);
-      if (newRemain !== t.remain) {
-        updateTimer(t.id, { remain: newRemain });
-        if (newRemain === 0) {
-          startRepeatingBeep();
-          alert(`${t.name} 完了！`);
-          stopRepeatingBeep();
-          logEvent("Completed", t.name);
+  // === ローカル描画ループ ===
+  setInterval(()=>{
+    const now=Date.now();
+    let completed=null;
+    Object.values(timers).forEach(t=>{
+      if(t.running && t.startTime){
+        const elapsed=Math.floor((now-t.startTime)/1000);
+        const remain=Math.max(0,t.total-elapsed);
+        if(remain!==t.remain){
+          t.remain=remain;
+          if(remain===0){
+            update(ref(db,"timers/"+t.id),{running:false,remain:0,startTime:null});
+            completed=t.name;logEvent("Complete",t.name);
+          }else if(elapsed%10===0){
+            update(ref(db,"timers/"+t.id),{remain});
+          }
         }
       }
+    });
+    updateBars();
+    if(completed){
+      doneName.textContent=`${completed} が完了しました`;
+      modal.style.display="flex";
+      startBeepLoop();
     }
-  });
-  updateBars();
-}, 1000);
+  },1000);
 
-// ===== イベント =====
-addBtn.addEventListener("click", addTimer);
-enableSoundBtn.addEventListener("click", () => beepPatternOnce(3));
+  stopSound.onclick=()=>{stopBeepLoop();modal.style.display="none";};
 </script>
 </body>
 </html>
