--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase連携・毎秒更新・完了音)</title>
+<title>タイマー</title>
 <style>
   body{background:#fff;color:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:0;}
   header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
